# solana-sniper-soldier

./: AGENTS.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  MONITORING_ROLLBACK_PLAN.md  README.md  solana-hft-platform_README.md
crates/hft-core/src/: market.rs
crates/hft-execution/src/: jito.rs
crates/hft-marketdata/src/: geyser.rs  lib.rs
