[workspace]
resolver = "2"
members = [
    "crates/hft-core",
    "crates/hft-marketdata",
    "crates/hft-execution",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Solana HFT Platform Team"]
repository = "https://github.com/example/solana-hft-platform"
description = "Ultra-low-latency, production-grade Solana trading platform çekirdeği"

[workspace.dependencies]
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "time"] }
tracing-appender = "0.2"
prometheus = "0.13"
parking_lot = "0.12"
arc-swap = "1.7"
crossbeam = "0.8"
once_cell = "1.19"
notify = "6.1"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }

hft-core = { path = "crates/hft-core" }
hft-config = { path = "crates/hft-config" }
hft-telemetry = { path = "crates/hft-telemetry" }
hft-marketdata = { path = "crates/hft-marketdata" }
hft-signals = { path = "crates/hft-signals" }
hft-risk = { path = "crates/hft-risk" }
hft-execution = { path = "crates/hft-execution" }
hft-security = { path = "crates/hft-security" }
hft-app = { path = "crates/hft-app" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
lto = "thin"
debug = true
